# main.go
@@ -7,19 +7,16 @@ import (
 	"github.com/gorilla/mux"
 
 	"github.com/hahattan/assignment/controller"
+	"github.com/hahattan/assignment/db/redis"
 )
 
 func main() {
 	r := mux.NewRouter()
-	// ping
-	r.HandleFunc("/api/ping", controller.Ping).Methods(http.MethodGet)
-
 	// admin
-	c := controller.NewController()
+	c := controller.NewController(redis.NewClient())
 	r.HandleFunc("/api/admin/token", c.AdminOnly(c.CreateToken)).Methods(http.MethodPost)
 	r.HandleFunc("/api/admin/token", c.AdminOnly(c.GetAllTokens)).Methods(http.MethodGet)
 	r.HandleFunc("/api/admin/token/{token}/disable", c.AdminOnly(c.DisableToken)).Methods(http.MethodPost)
-
 	//public
 	r.HandleFunc("/api/login", c.Login).Methods(http.MethodPost)
 
