# openapi/assignment.yaml
@@ -27,7 +27,7 @@ paths:
         '200':
           description: "OK"
           content:
-            text/plain:
+            application/json:
               example: "BpLnfg"
         '401':
           description: "Unauthorized"
@@ -91,13 +91,3 @@ paths:
           description: "Bad Request"
         '500':
           description: "Internal Server Error"
-
-  /ping:
-    get:
-      summary: "A simple 'ping' endpoint that can be used as a service healthcheck"
-      responses:
-        '200':
-          description: "OK"
-          content:
-            text/plain:
-              example: "pong"
